--- a/public_html/customStyle.css
+++ b/public_html/customStyle.css
@@ -53,9 +53,9 @@ h3 {
 }
 
 .browser {
-    text-align: center;
     font-size: 20px;
     color: #87aa89;
+    font-weight: bold;
 }
 
 /* portfolio page */
