--- a/public_html/customStyle.css
+++ b/public_html/customStyle.css
@@ -12,6 +12,7 @@ body {
     background-image: url(img/grid.png);
     background-repeat: repeat-x;
     background-attachment: fixed;
+    background-position: center bottom;
     font-family: "HelveticaNeue-Thin", "Helvetica Neue Thin", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
     color: #595959;
 }
@@ -222,19 +223,16 @@ h5 {
 
 .navbar-name-left {
     max-width: 250px;
-    margin-top: 10px;
+    margin-top: 15px;
     padding-left: 50px;
 }
 
-#navbar-name {
-    max-width: 400px;
-}
 .navbar-toggle, .collapsed {
     margin-bottom: 60px;
 }
 
 .navbar-nav {
-    margin-left: 15%;
+    margin-left: 18%;
 }
 
 .navbar-nav li {
@@ -258,6 +256,12 @@ h5 {
 }
 
 /* index page */
+.center {
+    margin-left: auto;
+    margin-right: auto;
+    width: 400px;
+}
+
 #nav {
     margin-top: 25%;
     margin-left: 10%;
