--- a/public_html/customStyle.css
+++ b/public_html/customStyle.css
@@ -37,7 +37,7 @@ h3 {
     margin-bottom: 20px;
     letter-spacing: 7px;
     font-size: 16px;
-    background-color: #f9fbf9;
+    background-color: #eaf1ea;
     padding-top: 8px;
     padding-bottom: 8px;
     padding-left: 16px;
@@ -175,6 +175,11 @@ h5 {
 }
 
 /* navbar */
+.navbar-default {
+    background-image: none;
+    background: rgba(255, 255, 255, 0.9);
+}
+
 .btn-default {
     background-image: none;
     background-color: #595959 !important;
@@ -190,14 +195,10 @@ h5 {
     border-radius: 100% !important;
     height: 90px !important;
     width: 90px !important;
-    margin-top: -5px;
-    margin-bottom: -5px;
+    margin-top: -6px;
+    margin-bottom: -6px;
     font-size: 10px;
-}
-
-.navbar-default {
-    background-image: none;
-    background-color: white !important;
+    z-index: 224;
 }
 
 .navbar-btn:hover {
@@ -222,21 +223,18 @@ h5 {
 }
 
 .navbar-name-left {
-    max-width: 250px;
-    margin-top: 15px;
-    padding-left: 50px;
+    width: 230px;
+    margin-top: 10px;
+    margin-left: 30px !important;
+    z-index: 200;
 }
 
 .navbar-toggle, .collapsed {
     margin-bottom: 60px;
 }
 
-.navbar-nav {
-    margin-left: 18%;
-}
-
 .navbar-nav li {
-    margin-left: 30px;
+    margin-right: 30px;
 }
 
 #active {
@@ -256,12 +254,6 @@ h5 {
 }
 
 /* index page */
-.center {
-    margin-left: auto;
-    margin-right: auto;
-    width: 400px;
-}
-
 #nav {
     margin-top: 25%;
     margin-left: 10%;
@@ -279,9 +271,16 @@ h5 {
     font-size: 14px;
 }
 
-.navbar-brand-center {
+.navbar-center {
     margin-bottom: 25px;
     margin-top: 10px;
+    max-width: 400px;
+}
+
+.center {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 400px;
 }
 
 /* about page */
