--- a/public_html/customStyle.css
+++ b/public_html/customStyle.css
@@ -30,6 +30,7 @@ a {
     background-color: #edf5ee;
     padding-top: 15px;
     padding-bottom: 15px;
+    margin-top: 10px;
 }
 
 h3 {
@@ -198,7 +199,6 @@ h5 {
     margin-top: -6px;
     margin-bottom: -6px;
     font-size: 10px;
-    z-index: 224;
 }
 
 .navbar-btn:hover {
@@ -225,8 +225,8 @@ h5 {
 .navbar-name-left {
     width: 230px;
     margin-top: 10px;
-    margin-left: 30px !important;
-    z-index: 200;
+    margin-left: 1px !important;
+    margin-bottom: 10px;
 }
 
 .navbar-toggle, .collapsed {
