Update navbar styling
- Add navbar li items
- Center li items
- Add navbar border

--- a/public_html/css/custom.css
+++ b/public_html/css/custom.css
@@ -1,8 +1,8 @@
 @import url("global.css");
 
+/* Animated Name */
 #container-name {
-	border-bottom: 1px solid rgba(9, 89, 105, 0.4);
-	padding: 5px 60px;
+	width: 80%;
 }
 .name-grid {
 	margin-bottom: 0;
@@ -55,7 +55,7 @@
 	text-shadow: 1px 1px rgba(9, 89, 105, 0.4);
 }
 #letter-n {
-	margin-left: 30px;
+	margin-left: 60px;
 }
 .animate span:before {
 	/*-webkit-transform: scale(0.85,1) skew(0deg,20deg);
@@ -82,6 +82,33 @@
 	-o-transform: rotateZ(-10deg);
 	transform: rotateZ(-10deg);*/
 }
+
+/* Navigation */
+#container-navbar {
+	border-top: 1px solid rgba(9, 89, 105, 0.2);
+	border-bottom: 1px solid rgba(9, 89, 105, 0.2);
+}
+.navbar {
+	padding-top: 0;
+	padding-bottom: 0;
+}
+/*.navbar-nav {
+	margin-top: -15px;
+}*/
+.nav-item {
+	padding: 0 22px;
+}
+.nav-link {
+	padding-top: 0;
+	padding-bottom: 0;
+	text-transform: uppercase;
+}
+
+/* Main Content */
+#container-main-content {
+	margin-top: 60px;
+}
+
 .blur {
    color: transparent;
    text-shadow: 0 0 7px rgba(23, 120, 139, 0.5);
