--- a/public_html/css/global.css
+++ b/public_html/css/global.css
@@ -1,11 +1,15 @@
 @import url(http://fonts.googleapis.com/css?family=Lato:400,900);
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,800);
+
 
 .font-load {
-  font-family: 'Lato', sans-serif;
+	font-family: 'Lato', sans-serif;
+	/*font-family: 'Raleyway', sans-serif;*/	
   position: absolute;
 }
 body {
-  font-family: 'Lato', sans-serif;
+	font-family: 'Lato', sans-serif;	
+  /*font-family: 'Raleyway', sans-serif;*/
 }
 .container {
 	padding-top: 5px;
